= master

* Make convert_each! in typecast_params plugin handle hashes with '0'..'N' keys without :keys option (jeremyevans)

= 3.7.0 (2018-04-20)

* Make response_request plugin work with error_handler and class_level_routing plugins (jeremyevans)

* Add content_security_policy plugin for setting an appropriate Content-Security-Policy header (jeremyevans)

= 3.6.0 (2018-03-26)

* Add :wrap option to json_parser plugin, for whether/how to wrap the uploaded JSON object (jeremyevans) (#142)

* Add :early_hints option to the assets plugin, for supporting sending early hints for calls to assets (jeremyevans)

* Add early_hints plugin for sending 103 Early Hint responses, currently only working on puma (jeremyevans)

= 3.5.0 (2018-02-14)

* Add request_aref plugin for configuring behavior of request [] and []= methods (jeremyevans)

* Make public plugin not add Content-Type header when serving 304 response for gzipped file (jeremyevans)

* Make content_for call with block convert block result to string before passing to tilt (jeremyevans) (#135)

= 3.4.0 (2018-01-12)

* Add middleware_stack plugin for removing middleware and inserting middleware before the end of the stack (jeremyevans)

* Make head plugin handle closing existing response bodies if the body responds to close (Eric Wong)

= 3.3.0 (2017-12-14)

* Add typecast_params plugin for converting param values to explicit types (jeremyevans)

= 3.2.0 (2017-11-16)

* Use microseconds in assets plugin :timestamp_paths timestamps (jeremyevans)

* Add timestamp_public plugin for serving static files with paths that change based on modify timestamp (jeremyevans)

= 3.1.0 (2017-10-13)

* Make set_layout_locals and set_view_locals in branch_locals plugin work when the other is not called (jeremyevans)

* Add :timestamp_paths option to assets plugin to include timestamps in paths in non-compiled mode (jeremyevans)
